<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cst_bg_main">

    <com.android.boot.ui.GameView
        android:id="@+id/game_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/top_hud"
        style="@style/Widget.Game.Panel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cst_hud_height"
        android:layout_gravity="top"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/cst_pad_12"
        android:paddingRight="@dimen/cst_pad_12">

        <TextView
            android:id="@+id/lives_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/cst_hud_badge_min_w"
            android:text="@string/hud_lives"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/gold_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_8"
            android:minWidth="@dimen/cst_hud_badge_min_w"
            android:text="@string/hud_gold"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/wave_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_8"
            android:minWidth="@dimen/cst_hud_badge_min_w"
            android:text="@string/hud_wave"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/status_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_8"
            android:layout_weight="1"
            android:text="@string/hud_status"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <Button
            android:id="@+id/pause_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pause" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/build_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/cst_pad_8">

        <Button
            android:id="@+id/archer_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_archer" />

        <Button
            android:id="@+id/barracks_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_barracks" />

        <Button
            android:id="@+id/cannon_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_cannon" />

        <Button
            android:id="@+id/mage_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_mage" />

        <Button
            android:id="@+id/shrine_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_shrine" />

        <Button
            android:id="@+id/hero_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_hero" />

        <Button
            android:id="@+id/reinforce_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_reinforce" />

        <Button
            android:id="@+id/spell_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_spell" />

        <Button
            android:id="@+id/next_wave_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_next_wave" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="560dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_command_banner"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/cst_pad_16">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_main"
                    android:textAppearance="@style/TextAppearance.Game.Title"
                    android:textColor="@color/cst_text_on_primary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/cst_pad_4"
                    android:text="@string/subtitle_main"
                    android:textAppearance="@style/TextAppearance.Game.Subtitle"
                    android:textColor="@color/cst_text_on_primary" />
            </LinearLayout>

            <TextView
                style="@style/Widget.Game.Badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cst_pad_12"
                android:text="@string/menu_stage_badge"
                android:textAppearance="@style/TextAppearance.Game.HudValue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/Widget.Game.Badge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_stage_one"
                android:textAppearance="@style/TextAppearance.Game.HudValue" />

            <TextView
                style="@style/Widget.Game.Badge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cst_pad_6"
                android:layout_weight="1"
                android:text="@string/menu_stage_two"
                android:textAppearance="@style/TextAppearance.Game.HudValue" />

            <TextView
                style="@style/Widget.Game.Badge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cst_pad_6"
                android:layout_weight="1"
                android:text="@string/menu_stage_three"
                android:textAppearance="@style/TextAppearance.Game.HudValue" />

            <TextView
                style="@style/Widget.Game.Badge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cst_pad_6"
                android:layout_weight="1"
                android:text="@string/menu_stage_four"
                android:textAppearance="@style/TextAppearance.Game.HudValue" />

            <TextView
                style="@style/Widget.Game.Badge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cst_pad_6"
                android:layout_weight="1"
                android:text="@string/menu_stage_five"
                android:textAppearance="@style/TextAppearance.Game.HudValue" />
        </LinearLayout>

        <LinearLayout
            style="@style/Widget.Game.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:background="@drawable/menu_stage_node"
                android:gravity="center"
                android:text="@string/menu_node_forest"
                android:textAppearance="@style/TextAppearance.Game.Caption" />

            <TextView
                style="@style/Widget.Game.Chip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cst_pad_8"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_route_badge"
                android:textAppearance="@style/TextAppearance.Game.HudValue" />

            <TextView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginLeft="@dimen/cst_pad_8"
                android:background="@drawable/menu_stage_node"
                android:gravity="center"
                android:text="@string/menu_node_market"
                android:textAppearance="@style/TextAppearance.Game.Caption" />

            <TextView
                style="@style/Widget.Game.Chip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cst_pad_8"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_split_badge"
                android:textAppearance="@style/TextAppearance.Game.HudValue" />

            <TextView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginLeft="@dimen/cst_pad_8"
                android:background="@drawable/menu_stage_node"
                android:gravity="center"
                android:text="@string/menu_node_gate"
                android:textAppearance="@style/TextAppearance.Game.Caption" />
        </LinearLayout>

        <TextView
            style="@style/Widget.Game.Badge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:gravity="center"
            android:text="@string/menu_hero_badge"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_button"
                style="@style/Widget.Game.Button.Primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/btn_start" />

            <Button
                android:id="@+id/help_button"
                style="@style/Widget.Game.Button.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cst_pad_8"
                android:layout_weight="1"
                android:text="@string/btn_how_to_play" />

            <Button
                android:id="@+id/sound_button"
                style="@style/Widget.Game.Button.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cst_pad_8"
                android:layout_weight="1"
                android:text="@string/btn_mute" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/help_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="520dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_20"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_how_to_play"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:text="@string/help_text"
            android:textAppearance="@style/TextAppearance.Game.Body" />

        <Button
            android:id="@+id/help_back_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_menu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pause_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_20"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pause"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <Button
            android:id="@+id/resume_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_resume" />

        <Button
            android:id="@+id/restart_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_restart" />

        <Button
            android:id="@+id/menu_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_menu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_20"
        android:visibility="gone">

        <TextView
            android:id="@+id/result_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_title"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <TextView
            android:id="@+id/result_stats_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:text="@string/hud_wave"
            android:textAppearance="@style/TextAppearance.Game.Body" />

        <Button
            android:id="@+id/result_restart_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_restart" />

        <Button
            android:id="@+id/result_menu_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_menu" />
    </LinearLayout>
</FrameLayout>
